sovles the y axis overflow issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .app {
+  box-sizing: border-box;
   display: grid;
   gap: 6rem;
   grid-template: max-content 1fr / auto; 
